--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,27 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
+         version="5.0">
 
-<web-app>
-  <display-name>Archetype Created Web Application</display-name>
+    <servlet>
+        <servlet-name>ManyToMany</servlet-name>
+        <servlet-class>hw2_smale_project.servletManyToMany.ManyToMany</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>ManyToMany</servlet-name>
+        <url-pattern>/child</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>OneToMany</servlet-name>
+        <servlet-class>hw2_smale_project.servletOneToMany.OneToMany</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>OneToMany</servlet-name>
+        <url-pattern>/teacher</url-pattern>
+    </servlet-mapping>
+
 </web-app>
